# cmd/main.go
@@ -18,24 +18,35 @@ import (
 // @version 2.0
 
 // @host localhost:8000
+
 func main() {
 	router := mux.NewRouter()
-	router.Use(middleware.ResponseHeaders)
 
 	httpServer := server.NewHttpServer()
 
-	router.Handle("/balance/{userId}", middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleGetBalance)))).Methods(http.MethodGet)
-	router.Handle("/balance", middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleIncreaseBalance)))).Methods(http.MethodPost)
+	router.Handle("/balance/{userId}", middleware.ResponseHeaders(middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleGetBalance))))).Methods(http.MethodGet)
+	router.Handle("/balance", middleware.ResponseHeaders(middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleIncreaseBalance))))).Methods(http.MethodPost)
 
-	router.Handle("/transaction", middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleGetTransactions)))).Methods(http.MethodGet)
-	router.Handle("/transaction", middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleTransaction)))).Methods(http.MethodPost)
+	router.Handle("/transaction", middleware.ResponseHeaders(middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleGetTransactions))))).Methods(http.MethodGet)
+	router.Handle("/transaction", middleware.ResponseHeaders(middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleTransaction))))).Methods(http.MethodPost)
 
-	router.Handle("/report", middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleCreateReport)))).Methods(http.MethodPost)
-	router.PathPrefix("/report/").Handler(middleware.RequestID(middleware.Logging(http.StripPrefix("/report/", http.FileServer(http.Dir(fmt.Sprintf("static%sfile", string(os.PathSeparator))))))))
+	router.Handle("/report", middleware.ResponseHeaders(middleware.RequestID(middleware.Logging(http.HandlerFunc(httpServer.HandleCreateReport))))).Methods(http.MethodPost)
+
+	routeGetReport(router)
 
 	router.PathPrefix("/swagger").Handler(swagger.WrapHandler).Methods(http.MethodGet)
 
 	if err := http.ListenAndServe(":8000", router); err != nil {
 		log.Fatal(err.Error())
 	}
+}
+
+// @summary Получения файла по ссылке
+// @tags report
+// @description Метод получения файла по ссылке
+// @success 200 {string} string "Возвращает содержимое файла. 1 колонка - id услуги (так как названия услуги в моем сервисе не предусмотрено, а доступа к другим нет, так как это просто тест), 2 колонка - общая сумма выручки за услугу"
+// @failure 404 "Если файл не найден"
+// @router /report/{fileName} [get]
+func routeGetReport(router *mux.Router) {
+	router.PathPrefix("/report/").Handler(middleware.RequestID(middleware.Logging(http.StripPrefix("/report/", http.FileServer(http.Dir(fmt.Sprintf("static%sfile", string(os.PathSeparator))))))))
 }
